Correct energy exponent to match max in icemc -> E21. Arrange inputs, add fixed position input file. Typos.

--- a/inputs.anita3.blazar.conf
+++ b/inputs.anita3.blazar.conf
@@ -34,7 +34,7 @@
 # Event input output
 ################################################################################################
 Number of neutrinos: 2000000   # How many neutrinos to generate
-Energy exponent: 20            # Select energy (just enter the exponent) or (30) for baseline ES&S (1) for E^-1 (2) for E^-2 (3) for E^-3 (4) for E^-4 (5) for ES&S flux with cosmological constant (6) for neutrino GZK flux from Iron nucleii (16-22)not using spectrum but just for a single energy (101-114)use all kinds of theoretical flux models
+Energy exponent: 20            # Select energy (just enter the exponent) or (30) for baseline ES&S (1) for E^-1 (2) for E^-2 (3) for E^-3 (4) for E^-4 (5) for ES&S flux with cosmological constant (6) for neutrino GZK flux from Iron nuclei (16-22)not using spectrum but just for a single energy (101-114)use all kinds of theoretical flux models
 Energy CDF or dartboard: 0     # If using an energy spectrum, select whether to draw from a CDF or from a dartboard model
 Neutrino position: 0           # (0) Pick neutrino position in the ice within the horizon of the balloon and neutrino direction such that the specular ray hitting the balloon sits on the Cerenkov cone or (1) Pick neutrino interaction point from anywhere in the ice and neutrino direction from all directions equally
 Write hists and trees: 1       # 1=write to histograms and trees, 0=don't write to histograms & trees
@@ -163,8 +163,6 @@ Theta points banana: 180    # Number of points scanned across the "theta" (polar
 Signal across frequencies: 0      # Make signal across frequencies for different viewing angles
 Shower type: 1      # Type of shower for the previous option (1=em, 0=had)
 Loop over boresights: 1      # loop over boresights
-Ignore Cross-Pol: 0 # For ignoring the cross-polarization component. Added to run sim without warnings.
-Polarization Sign Hack: 1 # Include hack to acquire the right sign of e/h. Added to run sim without warnings.
 
 
 ################################################################################################
@@ -184,13 +182,17 @@ Set tau modes: 0	     # set taumodes (tau created in rock)
 
 
 
-
+#!!!
 ################################################################################################
 # For source searches
 ################################################################################################
-Get neutrino direction from specified source: 0 # Use direction of neutrino from source (1) or not (0) 
-
-
+########################################*****************************************************************************
+Get neutrino direction from specified source: 1 # Use direction of neutrino from source (1) or not (0) 
+Source Option: TXS15  # TXS15, A3_FAVA
+Source Max Energy: 21
+Source Min Energy: 18
+Ignore Cross-Pol: 1 # For ignoring the cross-polarization component. Added to run sim without warnings.
+Polarization Sign Hack: 1 # Include hack to acquire the right sign of e/h. Added to run sim without warnings.
 
 
 
@@ -226,7 +228,7 @@ Coherent power threshold: 1300	# power threshold (arbitrary units) for coherent 
 
 
 ################################################################################################
-# Settings for impulse responses
+ # Settings for impulse responses
 ################################################################################################
 Digitizer path impulse response: 1 # apply impulse response to digitizer path (default for Anita-3 is 1, available also for Anita-2)
 Trigger path impulse response: 1 # apply impulse response to trigger path (default for Anita-3 is 1)
@@ -266,7 +268,3 @@ Off-axis attenuation: 0, 0, -35, -35, 0 # Attenuation applied to central phi sec
 Simulate TUFFs: 0              # simulate the TUFF notches for the whole flight
 Which TUFFs are on: 0, 0, 0    # which TUFF filters are on for the whole flight
 Add CW: 0                      # add CW
-
-Source Option: A3_FAVA REDSHIFT
-Source Max Energy: 22
-Source Min Energy: 18
