rearrange, change energy exponent

--- a/inputs.anita3.source.conf
+++ b/inputs.anita3.source.conf
@@ -188,8 +188,10 @@ Set tau modes: 0	     # set taumodes (tau created in rock)
 ################################################################################################
 # For source searches
 ################################################################################################
-Get neutrino direction from specified source: 0 # Use direction of neutrino from source (1) or not (0) 
-
+Get neutrino direction from specified source: 1 # Use direction of neutrino from source (1) or not (0) 
+Source Option: TXS15
+Source Max Energy: 21
+Source Min Energy: 18
 
 
 
@@ -264,9 +266,5 @@ Off-axis attenuation: 0, 0, -35, -35, 0 # Attenuation applied to central phi sec
 # Settings for TUFFs
 ################################################################################################
 Simulate TUFFs: 0              # simulate the TUFF notches for the whole flight
-Which TUFFs are on: 0, 0, 0    # which TUFF filters are on for the whole flight
+Which TUFFs are on: 0, 0, 0    # which 0TUFF filters are on for the whole flight
 Add CW: 0                      # add CW
-
-Source Option: TXS15
-Source Max Energy: 22
-Source Min Energy: 18
