Tweaks to try and get WAIS simulation to work

--- a/config/a3wais.conf
+++ b/config/a3wais.conf
@@ -62,8 +62,10 @@ Balloon altitude: 0 # 33642.9m # Pick balloon altitude in ft. (0) 120000 ft. or 
 Gain setting: 1 # Constant gains (0) or Ped's measured gains (1)
 
 
-Specific Payload Unix Time: 1420170374 # Set to a non-zero unix time during flight to generate events only near that position 
-Specific Payload Delta Time: 86400 # If a specific payload time is used, the delta around that 
+Specific Payload Unix Time: 1420084095 # Set to a non-zero unix time during flight to generate events only near that position 
+Specific Payload Delta Time: 1 # If a specific payload time is used, the delta around that 
+#Specific Payload Unix Time: 1420170374 # Set to a non-zero unix time during flight to generate events only near that position 
+#Specific Payload Delta Time: 86400 # If a specific payload time is used, the delta around that 
 
 
 
