--- a/inputs.anita3.blazar.fixed.position.conf
+++ b/inputs.anita3.blazar.fixed.position.conf
@@ -187,12 +187,12 @@ Set tau modes: 0	     # set taumodes (tau created in rock)
 ################################################################################################
 ########################################*****************************************************************************
 Get neutrino direction from specified source: 1 # Use direction of neutrino from source (1) or not (0) 
-Source Option: TXS15  # TXS15, A3_FAVA
+Source Option: SNA4  # TXS15, A3_FAVA
 Source Max Energy: 21
 Source Min Energy: 18
 Ignore Cross-Pol: 1 # For ignoring the cross-polarization component. Added to run sim without warnings.
 Polarization Sign Hack: 1 # Include hack to acquire the right sign of e/h. Added to run sim without warnings.
-
+Absolute declination cut: 999 # Cut on declination. If 999, no cuts. If say, absolute dec cut = 40, then only use neutrinos between dec = -40 to 40
 
 
 
