--- a/inputs.anita3.fixed.position.conf
+++ b/inputs.anita3.fixed.position.conf
@@ -43,7 +43,7 @@ Only final tree: 0             # 1=only write to final tree (for events that pas
 Max histogram entries: 2000000 # Maximum number of entries to store in histograms (10000=default).
 Random seed: 65546             # Random number seed
 Write neutrino position: 0     # Write neutrino position info to file
-Events map: 0                  # (1) EVENTSMAP draw the events distribution map or (0) not
+Events map: 1                  # (1) EVENTSMAP draw the events distribution map or (0) not
 
 
 
@@ -62,6 +62,7 @@ Balloon altitude: 120000. # Pick balloon altitude in ft. (0) 120000 ft. or whate
 Gain setting: 1 # Constant gains (0) or Ped's measured gains (1)
 Specific Payload Unix Time: 1419106575 # Set to a non-zero unix time during flight to generate events only near that position 
 Specific Payload Delta Time: 0 # If a specific payload time is used, the delta around that 
+
 
 
 ################################################################################################
@@ -162,6 +163,8 @@ Theta points banana: 180    # Number of points scanned across the "theta" (polar
 Signal across frequencies: 0      # Make signal across frequencies for different viewing angles
 Shower type: 1      # Type of shower for the previous option (1=em, 0=had)
 Loop over boresights: 1      # loop over boresights
+Ignore Cross-Pol: 0 # For ignoring the cross-polarization component. Added to run sim without warnings.
+Polarization Sign Hack: 0 # Include hack to acquire the right sign of e/h. Added to run sim without warnings.
 
 
 ################################################################################################
@@ -177,23 +180,20 @@ Constant crust density: 0      # Constant crust density (2.9 g/cm^3) and thickne
 Constant y: 0      # whether to use constant y at 0.2 (1) yes or (0) no
 Max interaction distance: 800000.      # max distance the interaction can be from the balloon, so that it is within the horizon
 Set tau modes: 0	     # set taumodes (tau created in rock)
+Minimum weight: 1e-10  # The smallest allowed weight
 
 
 
 
-#!!!
+
 ################################################################################################
 # For source searches
 ################################################################################################
-########################################*****************************************************************************
-Get neutrino direction from specified source: 1 # Use direction of neutrino from source (1) or not (0) 
-Source Option: SNA4  # TXS15, A3_FAVA
-Source Max Energy: 21
-Source Min Energy: 18
-Ignore Cross-Pol: 1 # For ignoring the cross-polarization component. Added to run sim without warnings.
-Polarization Sign Hack: 1 # Include hack to acquire the right sign of e/h. Added to run sim without warnings.
-Absolute declination cut: 1 # Cut on declination. If 90 (the max abs dec), no cuts. If say, absolute dec cut = 40, then only use neutrinos between dec = -40 to 40
-Draw all-sky map: 1
+Get neutrino direction from specified source: 0 # Use direction of neutrino from source (1) or not (0) 
+
+
+
+
 
 
 ################################################################################################
@@ -227,7 +227,7 @@ Coherent power threshold: 1300	# power threshold (arbitrary units) for coherent 
 
 
 ################################################################################################
- # Settings for impulse responses
+# Settings for impulse responses
 ################################################################################################
 Digitizer path impulse response: 1 # apply impulse response to digitizer path (default for Anita-3 is 1, available also for Anita-2)
 Trigger path impulse response: 1 # apply impulse response to trigger path (default for Anita-3 is 1)
@@ -264,6 +264,6 @@ Off-axis attenuation: 0, 0, -35, -35, 0 # Attenuation applied to central phi sec
 ################################################################################################
 # Settings for TUFFs
 ################################################################################################
-Simulate TUFFs: 0              # simulate the TUFF notches for the whole flight
-Which TUFFs are on: 0, 0, 0    # which TUFF filters are on for the whole flight
+Simulate TUFFs: 0              # simulate the TUFF notches for the whole flight (0: no tuffs, 1: tuffs on, 2: tuffs off, 3: tuffs as Butterworth filters)
+Which TUFFs are on: 0, 0, 0    # Butterworth filter simulation (only valid if above is 3)
 Add CW: 0                      # add CW
