--- a/inputs.anita3.supernova.conf
+++ b/inputs.anita3.supernova.conf
@@ -34,7 +34,7 @@
 # Event input output
 ################################################################################################
 Number of neutrinos: 2000000   # How many neutrinos to generate
-Energy exponent: 20            # Select energy (just enter the exponent) or (30) for baseline ES&S (1) for E^-1 (2) for E^-2 (3) for E^-3 (4) for E^-4 (5) for ES&S flux with cosmological constant (6) for neutrino GZK flux from Iron nuclei (16-22)not using spectrum but just for a single energy (101-114)use all kinds of theoretical flux models
+Energy exponent: 20           # Select energy (just enter the exponent) or (30) for baseline ES&S (1) for E^-1 (2) for E^-2 (3) for E^-3 (4) for E^-4 (5) for ES&S flux with cosmological constant (6) for neutrino GZK flux from Iron nuclei (16-22)not using spectrum but just for a single energy (101-114)use all kinds of theoretical flux models
 Energy CDF or dartboard: 0     # If using an energy spectrum, select whether to draw from a CDF or from a dartboard model
 Neutrino position: 0           # (0) Pick neutrino position in the ice within the horizon of the balloon and neutrino direction such that the specular ray hitting the balloon sits on the Cerenkov cone or (1) Pick neutrino interaction point from anywhere in the ice and neutrino direction from all directions equally
 Write hists and trees: 1       # 1=write to histograms and trees, 0=don't write to histograms & trees
@@ -55,13 +55,14 @@ Antenna layers: 4 # How many physical layers of antennas to include.  If you ind
 Inclination top three layers: 10     # Inclination angle in degrees for top three antenna layers 10=default
 Inclination fourth layer: 10     # Inclination angle in degrees for fourth layer of antennas 10=default
 Flight path: 8 # (0) fixed balloon position (1) randomized at 80deg S (2) anita-lite flight. (3) banana plot (note: banana plot forces energy, turns off noise and turns off slopyness.  "How many neutrinos to generate" is not used, nor are any inputs relating to a detection system. Also, constant crust density, ice thickness, and elevation are set.) (4) for comparison with Peter (5) Pick your own altitude, phi and theta 2=default (6) Anita 1 flight (7) Anita 2 flight (8) Anita 3 flight
-Balloon latitude: 999 # (degrees south) (999 is default position)
+Balloon latitude: 999  # (degrees south) (999 is default position)
 Balloon longitude: 999 # (degrees east) (999 is default position) longitude is between -180 and 180
 Balloon orientation: 0  # Fixed (0) or randomized (1) balloon orientation.  0=default
 Balloon altitude: 120000. # Pick balloon altitude in ft. (0) 120000 ft. or whatever you choose.
 Gain setting: 1 # Constant gains (0) or Ped's measured gains (1)
-Specific Payload Unix Time: 1419106575 # Set to a non-zero unix time during flight to generate events only near that position 
-Specific Payload Delta Time: 0 # If a specific payload time is used, the delta around that 
+Specific Payload Unix Time: 0 # Set to a non-zero unix time during flight to generate events only near that position 
+Specific Payload Delta Time: 3600 # If a specific payload time is used, the delta around that 
+
 
 
 ################################################################################################
@@ -192,8 +193,8 @@ Source Max Energy: 21
 Source Min Energy: 18
 Ignore Cross-Pol: 1 # For ignoring the cross-polarization component. Added to run sim without warnings.
 Polarization Sign Hack: 1 # Include hack to acquire the right sign of e/h. Added to run sim without warnings.
-Absolute declination cut: 1 # Cut on declination. If 90 (the max abs dec), no cuts. If say, absolute dec cut = 40, then only use neutrinos between dec = -40 to 40
-Draw all-sky map: 1
+
+
 
 
 ################################################################################################
