Add flight times, source subtype for sources. Add gamma exponent for custom sources. Update CMake for FAVA option. Settings updates.

--- a/inputs.anita3.custom.source.conf
+++ b/inputs.anita3.custom.source.conf
@@ -188,6 +188,9 @@ Set tau modes:0	     # set taumodes (tau created in rock)
 Get neutrino direction from specified source:1 # Use direction of neutrino from source (1) or not (0) 
 Source Option:CUSTOM# Choose from supernovae (SNA4), blazars (A3_FAVA), or your own source (CUSTOM). Only enter in CAPS and with no whitespace.
 Which Sources:All# For the range of sources from the source option, which sources to use? Set this to "All" for all sources, or set a name such as "SN2016ijk for only neutrinos from SN2016ijk"
+### We need to account for multiple sources: i.e. specify SN2016ijk and SN2017ghi
+### Search for neutrinos within a certain timeframe. if the options are there, cut around them. Probably add constants for A3_MIN,MAX etc.
+###Object type, only look for, for example, type II SNe.
 Source Max Energy:21
 Source Min Energy:18
 Ignore Cross-Pol:1 # For ignoring the cross-polarization component. Added to run sim without warnings.
@@ -197,9 +200,13 @@ Draw all-sky map:1 #Draw all-sky map
 ##############
 #### Custom source.
 #### If Source Option:CUSTOM, the following will be specified for the neutrino source:
+### Account for multiple, add these in as an array for each custom source
 Custom Name:SNtest# Your custom object's name
 Custom RA:245.58 # Custom object RA:0 -> 360
 Custom Dec:5.23  #Custom object dec:-90 -> 90
+Custom Gamma:2#Custom gamma index
+#### Future work:
+#### Custom source options: gamma, E, Enorm
 ##############
 
 ################################################################################################
