Add GRBs to source modelling. Some documentation, plotting.

--- a/inputs.anita3.blazar.fixed.position.conf
+++ b/inputs.anita3.blazar.fixed.position.conf
@@ -186,7 +186,7 @@ Set tau modes: 0	     # set taumodes (tau created in rock)
 ################################################################################################
 ########################################*****************************************************************************
 Get neutrino direction from specified source: 1 # Use direction of neutrino from source (1) or not (0) 
-Source Option:FAVA# Choose from supernovae (SN), flaring blazars (FAVA), or your own source (CUSTOM)
+Source Option:FAVA# Choose from supernovae (SN), flaring blazars (FAVA), gamma ray bursts (GRB) or your own source (CUSTOM)
 Which Sources:All# For the range of sources from the source option, which sources to use? Set this to "All" for all sources, or set a name such as "SN2016ijk for only neutrinos from SN2016ijk"
 Which Subtype:All# From the ranges of sources from a source model (i.e. SN, supernova), which subtype (i.e. II). Default = All
 Which Start Time:A3_MIN# When to start looking for sources: e.g. A3_MIN, A4_MIN, yourUnixTimeHere
@@ -201,7 +201,7 @@ Draw all-sky map: 1
 #### Custom source.
 #### If Source Option: CUSTOM, the following will be specified for the neutrino source:
 #### If using a source list (FAVA, SN), ignore this:
-Custom Name:SNtest# Your custom object's name
+Custom Name:customObject# Your custom object's name
 Custom RA: 245.58 # Custom object RA: 0 -> 360
 Custom Dec: 5.23  #Custom object dec: -90 -> 90
 Custom Gamma: 2 #Custom gamma index: Default is 2
