Not sure why tuffs were off by default in anita4..

--- a/inputs.anita4.conf
+++ b/inputs.anita4.conf
@@ -159,6 +159,8 @@ Theta points banana: 180    # Number of points scanned across the "theta" (polar
 Signal across frequencies: 0      # Make signal across frequencies for different viewing angles
 Shower type: 1      # Type of shower for the previous option (1=em, 0=had)
 Loop over boresights: 1      # loop over boresights
+Ignore Cross-Pol: 0 # For ignoring the cross-polarization component. Added to run sim without warnings.
+Polarization Sign Hack: 0 # Include hack to acquire the right sign of e/h. Added to run sim without warnings.
 Minimum weight: 0.  # The smallest allowed weight
 
 
@@ -244,7 +246,7 @@ Min bias: 0       # generate minimum bias sample (save events independently from
 ################################################################################################
 # Settings for TUFFs
 ################################################################################################
-Simulate TUFFs: 0              # simulate the TUFF notches for the whole flight (0: no tuffs, 1: tuffs on, 2: tuffs off, 3: tuffs as Butterworth filters)
+Simulate TUFFs: 1              # simulate the TUFF notches for the whole flight (0: no tuffs, 1: tuffs on, 2: tuffs off, 3: tuffs as Butterworth filters)
 Which TUFFs are on: 1, 1, 0    # Butterworth filter simulation (only valid if above is 3)
 Add CW: 0                      # add CW
 
