slight change in documentation. need to propagate to others...

--- a/inputs.anita3.conf
+++ b/inputs.anita3.conf
@@ -161,7 +161,7 @@ Weight on absorption: 1      # 1=use weight on absorption, 0=not use weight on a
 Phi points banana: 720    # Number of points scanned across the "phi" (azimuthal) coordinate for a banana plot. (only used with "balloon position" 3)
 Theta points banana: 180    # Number of points scanned across the "theta" (polar) coordinate for a banana plot. (only used with "balloon position" 3)
 Signal across frequencies: 0      # Make signal across frequencies for different viewing angles
-Shower type: 1      # Type of shower for the previous option (1=em, 0=had)
+Shower type: 1      # Type of shower for the previous two options (1=em, 0=had)
 Loop over boresights: 1      # loop over boresights
 Ignore Cross-Pol: 0 # For ignoring the cross-polarization component. Added to run sim without warnings.
 Polarization Sign Hack: 0 # Include hack to acquire the right sign of e/h. Added to run sim without warnings.
@@ -177,7 +177,7 @@ Secondary interactions: 1      # secondary interactions
 Tau decay as secondary interaction: 1      # tau decay counted as a secondary interaction
 Include atmosphere: 1      # include the atmosphere.  1=default
 Constant crust density: 0      # Constant crust density (2.9 g/cm^3) and thickness (40 km) (default=0)
-Constant y: 0      # whether to use constant y at 0.2 (1) yes or (0) no
+Constant y: 0      # whether to use constant y at 0.2 (1) or y at 1 (2) or non-constant y (0); 
 Max interaction distance: 800000.      # max distance the interaction can be from the balloon, so that it is within the horizon
 Set tau modes: 0	     # set taumodes (tau created in rock)
 Minimum weight: 0.  # The smallest allowed weight
