Do not use current cross-pol implementation. Now ignored by default. Minor other changes.

--- a/inputs.anita3.blazar.fixed.position.conf
+++ b/inputs.anita3.blazar.fixed.position.conf
@@ -193,7 +193,7 @@ Which Start Time:A3_MIN# When to start looking for sources: e.g. A3_MIN, A4_MIN,
 Which End Time:A3_MAX# When to stop looking for sources: e.g. A3_MAX, A4_MAX, yourUnixTimeHere, MAX specifies max unix time (2147483646)
 Source Max Energy: 21
 Source Min Energy: 18
-Ignore Cross-Pol: 1 # For ignoring the cross-polarization component. Added to run sim without warnings.
+Ignore Cross-Pol: 1 # For ignoring the cross-polarization component. Added to run sim without warnings. Must be set to 1 until cross pol is implemented correctly
 Polarization Sign Hack: 1 # Include hack to acquire the right sign of e/h. Added to run sim without warnings.
 Absolute declination cut: 90 # Cut on abs(dec), 90 gives all results, 10 will give only objects within -10<dec<10
 Draw all-sky map: 1
