--- a/inputs.anita3.custom.source.conf
+++ b/inputs.anita3.custom.source.conf
@@ -193,7 +193,7 @@ Which Sources:All# For the range of sources from the source option, which source
 ###Object type, only look for, for example, type II SNe.
 Source Max Energy:21
 Source Min Energy:18
-Ignore Cross-Pol:1 # For ignoring the cross-polarization component. Added to run sim without warnings.
+Ignore Cross-Pol: 1 # For ignoring the cross-polarization component. Added to run sim without warnings. Must be set to 1 until cross pol is implemented correctly
 Polarization Sign Hack:1 # Include hack to acquire the right sign of e/h. Added to run sim without warnings.
 Absolute declination cut:90 # Cut on abs(dec), 90 gives all results, 10 will give only objects within -10<dec<10
 Draw all-sky map:1 #Draw all-sky map
