--- a/inputs.anita4.blazar.fixed.position.conf
+++ b/inputs.anita4.blazar.fixed.position.conf
@@ -187,7 +187,7 @@ Get neutrino direction from specified source: 0 # Use direction of neutrino from
 Source Option: TXS15  # TXS15, A4_FAVA
 Source Max Energy: 21
 Source Min Energy: 18
-Ignore Cross-Pol: 1 # For ignoring the cross-polarization component. Added to run sim without warnings.
+Ignore Cross-Pol: 1 # For ignoring the cross-polarization component. Added to run sim without warnings. Must be set to 1 until cross pol is implemented correctly
 Polarization Sign Hack: 1 # Include hack to acquire the right sign of e/h. Added to run sim without warnings.
 
 
