--- a/inputs.anita4.source.conf
+++ b/inputs.anita4.source.conf
@@ -184,13 +184,13 @@ Set tau modes: 0	     # set taumodes (tau created in rock)
 # For source searches
 ################################################################################################
 Get neutrino direction from specified source: 1 # Use direction of neutrino from source (1) or not (0) 
-Source Option:FAVA # TXS15, A4_FAVA
-Which Sources:CTA 102
+Source Option:FAVA # TXS15, FAVA
+Which Sources:4C +01.02#objectName
 Which Start Time:A4_MIN# When to start looking for sources: e.g. A3_MIN, A4_MIN, yourUnixTimeHere
 Which End Time:A4_MAX# When to stop looking for sources: e.g. A3_MAX, A4_MAX, yourUnixTimeHere, MAX specifies max unix time (2147483646)
 Source Max Energy: 21
 Source Min Energy: 18
-Ignore Cross-Pol: 1 # For ignoring the cross-polarization component. Added to run sim without warnings.
+Ignore Cross-Pol: 1 # For ignoring the cross-polarization component. Added to run sim without warnings. Must be set to 1 until cross pol is implemented correctly
 Polarization Sign Hack: 1 # Include hack to acquire the right sign of e/h. Added to run sim without warnings.
 
 
