--- a/inputs.anita3_trigEffScan.conf
+++ b/inputs.anita3_trigEffScan.conf
@@ -162,7 +162,7 @@ Theta points banana: 180    # Number of points scanned across the "theta" (polar
 Signal across frequencies: 0      # Make signal across frequencies for different viewing angles
 Shower type: 1      # Type of shower for the previous option (1=em, 0=had)
 Loop over boresights: 1      # loop over boresights
-
+Ignore Cross-Pol: 1 # For ignoring the cross-polarization component. Added to run sim without warnings. Must be set to 1 until cross pol is implemented correctly
 
 
 
