update blazar conf to new name convention

--- a/inputs.anita3.blazar.conf
+++ b/inputs.anita3.blazar.conf
@@ -188,9 +188,11 @@ Set tau modes: 0	     # set taumodes (tau created in rock)
 ################################################################################################
 ########################################*****************************************************************************
 Get neutrino direction from specified source: 1 # Use direction of neutrino from source (1) or not (0) 
-Source Option: A3_FAVA
+Source Option: FAVA 
 Source Max Energy: 21
 Source Min Energy: 18
+Which Start Time: A3_MIN
+Which End Time: A3_MAX
 Ignore Cross-Pol: 1 # For ignoring the cross-polarization component. Added to run sim without warnings.
 Polarization Sign Hack: 1 # Include hack to acquire the right sign of e/h. Added to run sim without warnings.
 
