Change static altitude input from feet to meters.

--- a/inputs.anita3.conf
+++ b/inputs.anita3.conf
@@ -58,7 +58,7 @@ Flight path: 8 # (0) fixed balloon position (1) randomized at 80deg S (2) anita-
 Balloon latitude: 999 # (degrees south) (999 is default position)
 Balloon longitude: 999 # (degrees east) (999 is default position) longitude is between -180 and 180
 Balloon orientation: 0  # Fixed (0) or randomized (1) balloon orientation.  0=default
-Balloon altitude: 120000. # Pick balloon altitude in ft. (0) 120000 ft. or whatever you choose.
+Balloon altitude: 37000. # Pick balloon altitude in m. (0) 37000 m. or whatever you choose.
 Gain setting: 1 # Constant gains (0) or Ped's measured gains (1)
 Specific Payload Unix Time: 0 # Set to a non-zero unix time during flight to generate events only near that position 
 Specific Payload Delta Time: 3600 # If a specific payload time is used, the delta around that 
