--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -150,10 +150,10 @@ endmacro()
 
 #add_binary(icemc)
 #add_binary(nicemc)
-add_binary(testY)
-add_binary(testSettings)
+#add_binary(testY)
+#add_binary(testSettings)
 add_binary(testCrust)
-add_binary(testShower)
+#add_binary(testShower)
 # add_binary(testEAS) 
 # add_binary(testWAIS) 
 # add_binary(testThermalNoise)
