Restore Bedmap functionality to Antarctica, and change model flag numbers in settings: 0=Bedmap, 1=Crust1.0, 2=Crust2.0

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -153,6 +153,7 @@ endmacro()
 #add_binary(testY)
 #add_binary(testSettings)
 add_binary(testCrust)
+add_binary(testBedmap)
 #add_binary(testShower)
 # add_binary(testEAS) 
 # add_binary(testWAIS) 
