--- a/config/anita4.conf
+++ b/config/anita4.conf
@@ -132,7 +132,7 @@ Enable slopeyness: 1      # Turn on (1) and off (0) surface slopeyness.  1=defau
 Depth dependent refractive index: 1 # Turn on (1) and off (0) depth-dependent index of refraction.  1=default
 Variable attenuation length: 0 # Use constant (1) or variable (0) attenuation length in the ice. 0=default
 Constant ice thickness: 0 # Constant ice thickness (3 km)
-Antarctic ice model: 0 # Which model of the Antarctic ice to use.(0) Crust 2.0  (1) BEDMAP   (BEDMAP is much more finely binned, but will run more slowly.)
+Antarctic ice model: 2 # Which model of the Antarctic ice to use.(0) Bedmap  (1) Crust 1.0 (2) Crust 2.0   (BEDMAP is much more finely binned, but will run more slowly.)
 Flat surface: 0 # Set the normal to the surface to always be straight up. (1)  Setting to (0) is default.
 Fixed ice elevation: 0 # Fixed ice elevation
 Medium: 0 # ice (0) or salt(1)
