I stand corrected. When trying to compile while recursively looking for SOURCE_FILES and just looking for HEADER_FILES, it appears we want to invert the type of GLOB commands. Going by how CLASS_HEADERS used to be set.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,9 +49,9 @@ endif()
 
 set(DICTNAME G__${libname})
 
-file(GLOB HEADER_FILES "*.hh")
+file(GLOB_RECURSE HEADER_FILES *.h*)
 
-file(GLOB_RECURSE SOURCE_FILES *.cc)
+file(GLOB SOURCE_FILES "*.cc")
 
 ROOT_GENERATE_DICTIONARY(${DICTNAME} ${HEADER_FILES} LINKDEF LinkDef.h)
 
